# course_project

./: .env_example  REDME.md  pyproject.toml
src/: default_report.json  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_serveces.py  test_utils.py  test_views.py
